[gd_scene load_steps=5 format=3 uid="uid://d2un723p3oo5p"]

[ext_resource type="Script" path="res://_Tower/projectiles/bubble.gd" id="1_46fcx"]
[ext_resource type="Texture2D" uid="uid://df4bvp1ifmf74" path="res://Assets/Aseprite_made_by_Bowz/bubble.png" id="2_wr4l3"]
[ext_resource type="Material" uid="uid://ctgbraoxi6u0t" path="res://Particles/bubble_particle.tres" id="3_jqg6f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e3812"]
radius = 12.0

[node name="Projectile" type="Area2D"]
script = ExtResource("1_46fcx")

[node name="Projectile_Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_wr4l3")
region_rect = Rect2(4, 6, 8, 5)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e3812")
debug_color = Color(1, 1, 1, 0)

[node name="VisibleOnScreen" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-4.76837e-07, -0.25)
scale = Vector2(0.55, 0.525)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 4
process_material = ExtResource("3_jqg6f")
texture = ExtResource("2_wr4l3")
lifetime = 0.8
explosiveness = 0.27
randomness = 0.89

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="screen_exited" from="VisibleOnScreen" to="." method="_on_visible_on_screen_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
